--- a/NBL/Views/Shared/_UserLayoutPage.cshtml
+++ b/NBL/Views/Shared/_UserLayoutPage.cshtml
@@ -44,6 +44,17 @@
         roleName = "Factory";
         areas = "production";
     }
+    else if(User.IsInRole("ProductionManager"))
+    {
+        roleName = "P.M";
+        areas = "production"; 
+    }
+
+    else if(User.IsInRole("DispatchManager"))
+    {
+        roleName = "Dispatch";
+        areas = "production";
+    }
     else if (User.IsInRole("Accounts"))
     {
         roleName = "A & F";
@@ -253,6 +264,12 @@
                         break;
                     case "Factory":
                         Html.RenderPartial("~/Areas/Production/Views/Shared/_MenuPartialPage.cshtml");
+                        break;
+                    case "ProductionManager":
+                        Html.RenderPartial("~/Areas/Production/Views/Shared/_MenuProductionManagerPartialPage.cshtml");
+                        break;
+                    case "DispatchManager":
+                        Html.RenderPartial("~/Areas/Production/Views/Shared/_MenuDispatchManagerPartialPage.cshtml");
                         break;
                     case "Accounts":
                         Html.RenderPartial("~/Areas/AccountsAndFinance/Views/Shared/_MenuPartialPage.cshtml");
