--- a/NBL/Areas/Sales/Views/Replace/Entry.cshtml
+++ b/NBL/Areas/Sales/Views/Replace/Entry.cshtml
@@ -5,6 +5,232 @@
 }
 
 <section class="content">
-    <h3 class="text-center text-green">Replace Entry</h3>
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2" style="border: 1px solid">
+            <h3 class="text-center text-green">Replace Entry</h3>
+            @using (Ajax.BeginForm("Entry", new AjaxOptions()
+            {
+                InsertionMode = InsertionMode.Replace,
+                UpdateTargetId = "dane",
+                OnBegin = "LoadAllTempReplaceProduct",
+                OnSuccess = "LoadAllTempReplaceProduct"
+            }))
+            {
+                @Html.AntiForgeryToken()
+                @Html.ValidationSummary(true)
+
+                <div class="form-horizontal">
+                    <div class="form-group">
+                        <label for="ClientId" class="control-label col-md-3">Client Name</label>
+                        <div class="col-md-9">
+
+                            <input type="text" name="ClientName" id="ClientName" class="form-control" placeholder="Type Product Name" required autofocus />
+                            <input type="hidden" id="ClientId" name="ClientId" />
+
+                        </div>
+                    </div>
+
+
+                    <div class="form-group">
+                        <label for="ProductId" class="control-label col-md-3">Product</label>
+                        <div class="col-md-9">
+
+                            <input type="text" name="ProductName" id="ProductName" class="form-control" placeholder="Type Product Name" required />
+                            <input type="hidden" id="ProductId" name="ProductId" />
+
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="Quantity" class="control-label col-md-3">Quantity</label>
+                        <div class="col-md-9">
+
+                            <input type="number" name="Quantity" id="Quantity" class="form-control" placeholder="Quantity" required />
+
+
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="Remarks" class="control-label col-md-3">Remarks</label>
+                        <div class="col-md-9">
+
+
+                            <textarea id="Remarks" name="Remarks" rows="3" required style="resize: none;width: 100%" placeholder="Remarks..."></textarea>
+
+
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-3"></div>
+                        <div class="col-md-9">
+
+                            <div class="btn-toolbar">
+                                <input type="submit" value="Add Item" class="btn btn-info" />
+                                <input type="button" id="removeAllButton" value="Remove All" onclick="RemoveAll(this)" class="btn btn-danger " />
+                                <input type="button" value="Submit" class="btn btn-primary" onclick="SaveReplacementInfo(this.form)" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            }
+            <hr />
+            <div id="dane" class="text-center">
+                Number of Details :
+            </div>
+            <hr />
+            <div class="row">
+                <div class="col-md-12">
+                    <div id="divReplaceProducts"></div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <br/>
+    
+    @using (Html.BeginForm("SaveReplacementInfo","Replace",FormMethod.Post,new {id= "SaveReplacementInfoForm" }))
+    {
+
+        <div class="form-horizontal">
+            <input type="hidden" id="ClientId1" name="ClientId1" />
+            <div class="form-group">
+                
+            </div>
+        </div>
+    }
 </section>
 
+
+@section Scripts
+{
+    
+    
+    <script>
+        
+        function SaveReplacementInfo(form) {
+
+           // alert(btnClicked.id);
+            if (confirm("Are you sure to save this replacement info ??")) {
+                $("#SaveReplacementInfoForm").submit();
+            }
+
+
+        }
+        
+        function RemoveProductById(btnClicked) {
+
+            //alert(btnClicked.id);
+            if (confirm("Are you sure to remove this product ??")) {
+                var id = btnClicked.value;
+                var json = { id: id };
+                $.ajax({
+                    type: "POST",
+                    url: '@Url.Action("RemoveProductById", "Replace",new {area="Sales"})',
+                    contentType: "application/json; charset=utf-8",
+                    data: JSON.stringify(json),
+                    success: function (data) {
+                        LoadAllTempReplaceProduct();
+                    }
+                });
+            }
+
+
+        }
+
+        function RemoveAll(btnClick) {
+            var result = confirm('Are you sure to remove all item ?');
+            if (result) {
+                $.ajax({
+                    type: "GET",
+                    url: '@Url.Action("RemoveAll","Replace",new {area="Sales"})',
+                    contentType: "application/json; charset=utf-8",
+                    success: function (data) {
+                        LoadAllTempReplaceProduct();
+                    }
+
+                });
+
+            }
+        }
+
+        $(document).ready(function () {
+
+            LoadAllTempReplaceProduct();
+        });
+    </script>
+    <script>
+        $(function () {
+            $("#ClientName").autocomplete({
+                source: function (request, response) {
+                    $.ajax({
+                        url: RootUrl + 'Common/ClientNameAutoComplete/',
+                        data: "{ 'prefix': '" + request.term + "'}",
+                        dataType: "json",
+                        type: "POST",
+                        contentType: "application/json; charset=utf-8",
+                        success: function (data) {
+                            response($.map(data,
+                                function (item) {
+                                    return item;
+                                }));
+                        },
+                        error: function (response) {
+                            alert(response.responseText);
+                        },
+                        failure: function (response) {
+                            alert(response.responseText);
+                        }
+                    });
+                },
+                select: function (e, i) {
+                    $("#ClientId").val(i.item.val);
+                    $("#ClientId1").val(i.item.val);
+                },
+                minLength: 1
+            });
+        });
+
+
+        $(function () {
+            $("#ProductName").autocomplete({
+                source: function (request, response) {
+                    $.ajax({
+                        url: RootUrl + 'common/ProductNameAutoComplete/',
+                        data: "{ 'prefix': '" + request.term + "'}",
+                        dataType: "json",
+                        type: "POST",
+                        contentType: "application/json; charset=utf-8",
+                        success: function (data) {
+                            response($.map(data,
+                                function (item) {
+                                    return item;
+                                }));
+                        },
+                        error: function (response) {
+                            alert(response.responseText);
+                        },
+                        failure: function (response) {
+                            alert(response.responseText);
+                        }
+                    });
+                },
+                select: function (e, i) {
+                    $("#ProductId").val(i.item.val);
+                },
+                minLength: 1
+            });
+        });
+
+        function LoadAllTempReplaceProduct() {
+          
+            $.ajax({
+                type: 'Post',
+                url: RootUrl + "sales/replace/LoadAllTempReplaceProduct",
+                contentType: 'application/json; charset=utf-8',
+                success: function (data) {
+                    $("#divReplaceProducts").html(data);
+                }
+            });
+        }
+    </script>
+}
