--- a/NBL/Areas/Sales/Views/Shared/_SalesPersonMenuPartialPage.cshtml
+++ b/NBL/Areas/Sales/Views/Shared/_SalesPersonMenuPartialPage.cshtml
@@ -92,6 +92,7 @@
                 </a>
                 <ul class="treeview-menu">
                     <li>@Html.ActionLink(" Entry", "Entry", "Replace", new {area = "Sales"}, new {@class = "fa fa-plus", style = "font-weight: bolder"})</li>
+                    <li>@Html.ActionLink(" Delivery", "Delivery", "Replace", new {area = "Sales"}, new {@class = "fa fa-pencil", style = "font-weight: bolder"})</li>
                     <li>@Html.ActionLink(" View All", "Home", "Replace", new {area = "Sales"}, new {@class = "fa fa-eye", style = "font-weight: bolder"})</li>
 
 
