--- a/NBL/Views/Login/GoTo.cshtml
+++ b/NBL/Views/Login/GoTo.cshtml
@@ -52,11 +52,11 @@
 
                 </select>
 
-                @*<br />
+                <br />
                 <select class="form-control" name="RoleId" id="RoleId" required>
                     <option value="">--Select--</option>
                    
-                </select>*@
+                </select>
                 <br />
                 <div class="form-group">
 
