--- a/NBL/Views/Login/LogIn.cshtml
+++ b/NBL/Views/Login/LogIn.cshtml
@@ -46,6 +46,22 @@
                             </select>
                         </div>
                     </div>
+                    
+                    @*<div class="form-group">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-life-saver"></i></span>
+                            <select class="form-control" required name="RoleId" autofocus>
+                               
+                                @{
+                                    foreach (var item in ViewBag.Roles)
+                                    {
+                                        <option value="@item.RoleId">@item.RoleName</option>
+                                    }
+
+                                }
+                            </select>
+                        </div>
+                    </div>*@
 
                     <div class="form-group">
                         <div class="input-group">
