--- a/NBL/Areas/Corporate/Views/Home/Home.cshtml
+++ b/NBL/Areas/Corporate/Views/Home/Home.cshtml
@@ -7,39 +7,110 @@
 
 <section class="content">
   
-    @{
-        foreach (ViewBranch branch in Model.Branches)
-        {
-            <div class="col-md-4 col-sm-6 col-xs-12">
-                <div class="info-box">
-                    <span class="info-box-icon bg-aqua">&#2547;</span>
-                    <div class="info-box-content">
-                        <span class="info-box-text">
-                            Sales in ( @Ajax.ActionLink(branch.BranchName, "OrderSummary", new { branchId = branch.BranchId },
-                                           new AjaxOptions
-                                           {
-                                               HttpMethod = "GET", // HttpMethod to use, GET or POST
-                                               UpdateTargetId = "divOrders", // ID of the HTML element to update
-                                               InsertionMode = InsertionMode.Replace,// Replace the existing contents
-                                               LoadingElementId = "divloading",
-                                               OnBegin = "ClearResults('Branch Name : " + branch.BranchName + "')"
+    <div class="row">
+        <div class="col-md-6">
+            <h3 class="text-center text-green">Total Sales</h3>
+            <table id="tbl_Sales_summary" class="display table-bordered" style="border: 1px solid">
+      
+                <thead>
+                <tr>
+                    <th>Branch Name</th>
+                    <th class="text-right">Total Order</th>
 
-                                           }))
-                        </span>
-                        <span class="info-box-number">@branch.Orders.Count()</span>
+                </tr>
+                </thead>
+                <tbody>
+                @{
+                    foreach (ViewBranch branch in Model.Branches)
+                    {
 
-                    </div>
-                    <!-- /.info-box-content -->
-                </div>
-                <!-- /.info-box -->
-            </div>
-        }
-    }
+
+                        <tr>
+                            <td>@branch.BranchName</td>
+                            <td class="text-right">@branch.Orders.Count</td>
+
+                        </tr>
+
+                    }
+                }
+                </tbody>
+                <tfoot>
+                <tr>
+                    <th class="text-right">Total</th>
+                    <th class="text-right">
+                        @{
+                            var total = 0;
+                            foreach (var item in Model.Branches)
+                             {
+                                total+=item.Orders.Count;
+                             }
+                            @total
+                        }
+                       
+                    </th>
+
+                </tr>
+                </tfoot>
+            </table>
+        </div>
+        <div class="col-md-6">
+            <h3 class="text-center text-green">Total Stock Qty</h3>
+            <table id="tbl_Stock_summary" class="display table-bordered" style="border: 1px solid">
+      
+                <thead>
+                <tr>
+                    <th>Branch Name</th>
+                    <th class="text-right">Total Quantity</th>
+
+                </tr>
+                </thead>
+                <tbody>
+                @{
+                    foreach (ViewBranch branch in Model.Branches)
+                    {
+
+
+                        <tr>
+                            <td>@branch.BranchName</td>
+                            <td class="text-right">@branch.Products.Sum(n=>n.StockQuantity)</td>
+
+                        </tr>
+
+                    }
+                }
+                </tbody>
+                <tfoot>
+                <tr>
+                    <th  class="text-right">Total Quantity</th>
+                    <th class="text-right">
+                        @{
+                            var t = 0;
+                            foreach (ViewBranch branch in Model.Branches)
+                            {
+
+                                t += branch.Products.Sum(n => n.StockQuantity);
+                            }
+                        }
+                        @t
+                    </th>
+                   
+                   
+
+                </tr>
+                </tfoot>
+            </table>
+        </div>
+    </div>
+  
 
 </section>
 
 @section Scripts
 {
+    <script>
+        $("#tbl_Sales_summary").DataTable();
+        $("#tbl_Stock_summary").DataTable();
+    </script>
     <script type="text/javascript">
         var timeout = setTimeout("location.reload(true);", 60000);
         function resetTimeout() {
