--- a/NBL/Views/Shared/_UserLayoutPage.cshtml
+++ b/NBL/Views/Shared/_UserLayoutPage.cshtml
@@ -100,6 +100,11 @@
         roleName = "R & D";
         areas = "researchanddevelopment";
     }
+    else if (User.IsInRole("SCMManager"))
+    {
+        roleName = "SCM Manager";
+        areas = "SCM";
+    }
     else if (User.IsInRole("ServiceExecutive"))
     {
         roleName = "Service Executive";
@@ -256,6 +261,9 @@
                     case "R&D":
                         Html.RenderPartial("~/Areas/ResearchAndDevelopment/Views/Shared/_MenuPartialPage.cshtml");
                         break;
+                    case "SCMManager":
+                        Html.RenderPartial("~/Areas/SCM/Views/Shared/_MenuScmManagerPartialPage.cshtml");
+                        break;
                     case "ServiceExecutive":
                         Html.RenderPartial("~/Areas/Services/Views/Shared/_ServiceExecutiveMenuPartialPage.cshtml");
                         break;
@@ -298,8 +306,7 @@
                     case "Management":
                         Html.RenderPartial("~/Areas/Management/Views/Shared/_MenuPartialPage.cshtml");
                         break;
-                   
-
+                  
                 }
 
             </section>
