Destribution center set by SCM done

--- a/NBL/Areas/Corporate/Views/Home/Home.cshtml
+++ b/NBL/Areas/Corporate/Views/Home/Home.cshtml
@@ -6,103 +6,8 @@
 }
 
 <section class="content">
-  
-    <div class="row">
-        <div class="col-md-6">
-            <h3 class="text-center text-green">Total Sales</h3>
-            <table id="tbl_Sales_summary" class="display table-bordered" style="border: 1px solid">
-      
-                <thead>
-                <tr>
-                    <th>Branch Name</th>
-                    <th class="text-right">Total Order</th>
-
-                </tr>
-                </thead>
-                <tbody>
-                @{
-                    foreach (ViewBranch branch in Model.Branches)
-                    {
-
-
-                        <tr>
-                            <td>@branch.BranchName</td>
-                            <td class="text-right">@branch.Orders.Count</td>
-
-                        </tr>
-
-                    }
-                }
-                </tbody>
-                <tfoot>
-                <tr>
-                    <th class="text-right">Total</th>
-                    <th class="text-right">
-                        @{
-                            var total = 0;
-                            foreach (var item in Model.Branches)
-                             {
-                                total+=item.Orders.Count;
-                             }
-                            @total
-                        }
-                       
-                    </th>
-
-                </tr>
-                </tfoot>
-            </table>
-        </div>
-        <div class="col-md-6">
-            <h3 class="text-center text-green">Total Stock Qty</h3>
-            <table id="tbl_Stock_summary" class="display table-bordered" style="border: 1px solid">
-      
-                <thead>
-                <tr>
-                    <th>Branch Name</th>
-                    <th class="text-right">Total Quantity</th>
-
-                </tr>
-                </thead>
-                <tbody>
-                @{
-                    foreach (ViewBranch branch in Model.Branches)
-                    {
-
-
-                        <tr>
-                            <td>@branch.BranchName</td>
-                            <td class="text-right">@branch.Products.Sum(n=>n.Quantity)</td>
-
-                        </tr>
-
-                    }
-                }
-                </tbody>
-                <tfoot>
-                <tr>
-                    <th  class="text-right">Total Quantity</th>
-                    <th class="text-right">
-                        @{
-                            var t = 0;
-                            foreach (ViewBranch branch in Model.Branches)
-                            {
-
-                                t += branch.Products.Sum(n => n.Quantity);
-                            }
-                        }
-                        @t
-                    </th>
-                   
-                   
-
-                </tr>
-                </tfoot>
-            </table>
-        </div>
-    </div>
-  
-
+    @Html.Partial("_RptOrderStockSummaryPartialPage",Model)
+ 
 </section>
 
 @section Scripts
