--- a/NBL/Areas/Sales/Views/Order/Order.cshtml
+++ b/NBL/Areas/Sales/Views/Order/Order.cshtml
@@ -40,7 +40,8 @@
                         <label for="Quantity" class="control-label col-md-3">Quantity</label>
                         <div class="col-md-9">
 
-                            <input type="number" id="Quantity" name="Quantity" class="form-control text-right" min="1" value="1" />
+                            <input type="number" id="Quantity" name="Quantity" class="form-control text-right" min="1" value="1" onkeyup="ValidateMaxQuantity(this)" OnChange="ValidateMaxQuantity(this)"/>
+                          
                             <div id="divQuantityLimitOutput"></div>
                         </div>
                     </div>
@@ -81,6 +82,9 @@
         </div>
     }
     <hr style="padding: 0; margin: 0;" />
+    <div id="dialog" title="Warning">
+       <p> Delivery qty must be less than or equal stock qty </p>
+    </div>
 </section>
 
 
@@ -414,5 +418,50 @@
             });
         });
     </script>
+    
+    
+    @*Validate Max Quantity*@
+    <script>
 
+        function ValidateMaxQuantity(event) {
+            var id = event.id;
+            var deliverqty = $("#" + id).val();
+            if (deliverqty === '') {
+                deliverqty = 0;
+            } else {
+                deliverqty = parseInt($("#" + id).val(),10);
+            }
+            //alert(deliverqty);
+
+            var quantity = parseInt($("#StockQty").val(), 10);
+            if (deliverqty > quantity || deliverqty<0) {
+                ShowWarningDialog();
+                $("#" + id).val('1');
+            }
+
+        }
+
+        function  ShowWarningDialog(){
+            $("#dialog").dialog("open").parent().addClass("ui-state-error");
+        }
+    </script>
+
+
+    <script>
+        $( function() {
+            $( "#dialog" ).dialog({
+                autoOpen: false,
+                show: {
+                    effect: "blind"
+               
+                },
+                hide: {
+                    effect: "explode"
+               
+                }
+            });
+ 
+        
+        } );
+    </script>
 }
