--- a/NBL/Views/Shared/_ViewStockProductInBranchPartialPage.cshtml
+++ b/NBL/Views/Shared/_ViewStockProductInBranchPartialPage.cshtml
@@ -1,5 +1,13 @@
-﻿@model IEnumerable<NBL.Models.ViewModels.ViewProduct>
-<div style="padding: 10px; margin: 10px; font-weight: bolder; height: 50px;border: 1px solid green"> Total Quantity : @Model.Sum(n => n.Quantity)</div>
+﻿@model NBL.Models.ViewModels.Summaries.SummaryModel
+@{
+    ViewBag.Title = "Stock";
+    Layout = "~/Views/Shared/_UserLayoutPage.cshtml";
+}
+
+<section class="content">
+    @Html.ActionLink(" Back To List", "Home","Home",null,new {@class="btn btn-info btn-sm"})
+    <h2 class="text-center text-green">Stock In <strong>@Model.Branch.BranchName</strong> : @Model.Products.Sum(n => n.Quantity)</h2>
+
 <table id="table_product_list_in_stock" class="display table table-striped table-bordered" style="border:1px solid black">
 
     <thead>
@@ -13,7 +21,7 @@
 
     <tbody>
 
-    @foreach (var item in Model)
+    @foreach (var item in Model.Products)
     {
         <tr>
             <td>@item.ProductName</td>
@@ -35,12 +43,17 @@
     </tfoot>
 </table>
 
+</section>
+@section Scripts
+{
+    <script>
 
-<script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.10.18/datatables.min.js"></script>
-<script>
+        $('#table_product_list_in_stock').DataTable({
+            "lengthMenu": [[15, 30, 50, -1], [15, 30, 50, "All"]]
+        });
 
-    $('#table_product_list_in_stock').DataTable({
-        "lengthMenu": [[15, 30, 50, -1], [15, 30, 50, "All"]]
-    });
+    </script>
 
-</script>
+    
+}
+
