--- a/NBL/Areas/SCM/Views/Order/Approve.cshtml
+++ b/NBL/Areas/SCM/Views/Order/Approve.cshtml
@@ -14,11 +14,7 @@
 
             @using (Html.BeginForm("Approve", "Order", FormMethod.Post, new { area = "SCM", id = "ApproveOrderForm" }))
             {
-                var amounts = Model.OrderItems.Sum(n => n.SubTotal) - Model.SpecialDiscount;
-
-
-
-
+               
                 <div class="row">
                     <div class="form-horizontal">
 
@@ -38,28 +34,18 @@
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <div class="form-group">
-                                <label class="control-label col-md-6">Special Discount (&#2547;)</label>
-                                <div class="col-md-6">
-                                    <input type="number" value="@Model.SpecialDiscount" name="Discount" id="Discount" class="form-control text-right" onkeyup="CalculateNetAmount(this)" />
-                                </div>
-                            </div>
+                           
                             <div class="form-group">
                                 <label class="control-label col-md-6">Distribution Point</label>
                                 <div class="col-md-6">
                                     @Html.DropDownListFor(model => model.DistributionPointId, null, new { @class = "form-control" })
                                 </div>
                             </div>
-                            <div class="form-group">
-                                <label class="control-label col-md-6">Net (&#2547;)</label>
-                                <div class="col-md-6">
-                                    <input type="number" name="Net" id="Net" value="@amounts" class="form-control text-right" readonly />
-                                </div>
-                            </div>
+                           
                             <div class="form-group">
                                 <label class="control-label col-md-2"></label>
                                 <div class="col-md-10 text-right">
-                                    @Html.ActionLink("Back", "PendingOrder", "OrderSalesAdmin", new { area = "Sales" }, new { @class = "btn btn-info" })
+                                    @Html.ActionLink("Back", "PendingOrder", "Order", new { area = "SCM" }, new { @class = "btn btn-info" })
                                     <input type="button" value="Approve" class="btn btn-success" onclick="ApproveOrder(this)" />
                                 </div>
                             </div>
