--- a/NBL/Areas/SCM/Views/Shared/_ViewDeliveredOrdersPartialPage.cshtml
+++ b/NBL/Areas/SCM/Views/Shared/_ViewDeliveredOrdersPartialPage.cshtml
@@ -3,7 +3,8 @@
 @{
       
 }
-<table id="table_Order_list" class="display table-bordered" style="border:1px solid black">
+<div class="table-responsive">
+<table id="table_Order_list" class="table table-bordered table-hover" style="border:1px solid black">
 
 
     <thead>
@@ -56,3 +57,4 @@
         </tr>
     </tfoot>
 </table>
+</div>
