--- a/NBL/Areas/ResearchAndDevelopment/Views/Shared/_MenuPartialPage.cshtml
+++ b/NBL/Areas/ResearchAndDevelopment/Views/Shared/_MenuPartialPage.cshtml
@@ -19,6 +19,20 @@
     <li class="treeview">
         <a href="#">
             <i class="fa fa-product-hunt"></i>
+            <span>Requisitions</span>
+            <span class="pull-right-container">
+                <i class="fa fa-angle-left pull-right"></i>
+            </span>
+        </a>
+        <ul class="treeview-menu">
+         
+            <li>@Html.ActionLink(" New Requisition", "GeneralRequisition", "Home", new {area = "ResearchAndDevelopment" }, new {@class = "fa fa-eye"})</li>
+        </ul>
+    </li>
+
+    <li class="treeview">
+        <a href="#">
+            <i class="fa fa-product-hunt"></i>
             <span>Products</span>
             <span class="pull-right-container">
                 <i class="fa fa-angle-left pull-right"></i>
@@ -27,6 +41,7 @@
         <ul class="treeview-menu">
           
             <li>@Html.ActionLink(" Product Life Cycle ", "ProductLifeCycle", "Product", new {area = "ResearchAndDevelopment" }, new {@class = "fa fa-eye"})</li>
+            <li>@Html.ActionLink(" Product Status ", "ProductStatus", "Product", new {area = "ResearchAndDevelopment" }, new {@class = "fa fa-eye"})</li>
         </ul>
     </li>
 
