--- a/NBL/Views/Shared/_RptOrderStockSummaryPartialPage.cshtml
+++ b/NBL/Views/Shared/_RptOrderStockSummaryPartialPage.cshtml
@@ -3,16 +3,17 @@
 <div class="row">
     <div class="col-md-6">
         <h3 class="text-center text-green">Total Sales</h3>
-        <table id="tbl_Sales_summary" class="display table-bordered" style="border: 1px solid">
+        <div class="table-responsive">
+            <table id="tbl_Sales_summary" class="display table-bordered" style="border: 1px solid">
 
-            <thead>
+                <thead>
                 <tr>
                     <th>Branch Name</th>
                     <th class="text-right">Total Order</th>
                     <th class="text-center">Action</th>
                 </tr>
-            </thead>
-            <tbody>
+                </thead>
+                <tbody>
                 @{
                     foreach (ViewBranch branch in Model.Branches)
                     {
@@ -28,8 +29,8 @@
 
                     }
                 }
-            </tbody>
-            <tfoot>
+                </tbody>
+                <tfoot>
                 <tr>
                     <th class="text-right">Total</th>
                     <th class="text-right">
@@ -45,8 +46,9 @@
                     </th>
                     <th class="text-center">Action</th>
                 </tr>
-            </tfoot>
-        </table>
+                </tfoot>
+            </table>
+        </div>
     </div>
     <div class="col-md-6">
         <h3 class="text-center text-green">Total Stock Qty</h3>
