Create  & View general requsition done

--- a/NBL/Areas/ResearchAndDevelopment/Views/Shared/_MenuPartialPage.cshtml
+++ b/NBL/Areas/ResearchAndDevelopment/Views/Shared/_MenuPartialPage.cshtml
@@ -16,19 +16,7 @@
             </li>
         </ul>
     </li>
-    <li class="treeview">
-        <a href="#">
-            <i class="fa fa-product-hunt"></i>
-            <span>Requisitions</span>
-            <span class="pull-right-container">
-                <i class="fa fa-angle-left pull-right"></i>
-            </span>
-        </a>
-        <ul class="treeview-menu">
-         
-            <li>@Html.ActionLink(" New Requisition", "GeneralRequisition", "Home", new {area = "ResearchAndDevelopment" }, new {@class = "fa fa-eye"})</li>
-        </ul>
-    </li>
+   @Html.Partial("_CommonMenuPartialPage")
 
     <li class="treeview">
         <a href="#">
