--- a/NBL/Areas/Sales/Views/Shared/_MenuPartialPage.cshtml
+++ b/NBL/Areas/Sales/Views/Shared/_MenuPartialPage.cshtml
@@ -1,6 +1,6 @@
-﻿@*Sales common Menu*@
-
-
+﻿
+@*Sales common Menu*@
+@Html.Partial("_CommonMenuPartialPage")
 <li class="treeview">
     <a href="#">
         <i class="fa fa-eye"></i>
